--- a/src/components/spinner.css
+++ b/src/components/spinner.css
@@ -17,7 +17,7 @@
   width: 48px;
   height: 48px;
   border-radius: 50%;
-  border-left: 4px solid #FF3D00;
+  border-left: 4px solid #54B4D3;
   border-bottom: 4px solid transparent;
   animation: rotation 0.5s linear infinite reverse;
 }
